[gd_scene load_steps=34 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scripts/personagem.gd" type="Script" id=2]
[ext_resource path="res://assets/Personagem/p1_walk01.png" type="Texture" id=3]
[ext_resource path="res://assets/Personagem/p1_walk02.png" type="Texture" id=4]
[ext_resource path="res://assets/Personagem/p1_walk03.png" type="Texture" id=5]
[ext_resource path="res://assets/Personagem/p1_walk04.png" type="Texture" id=6]
[ext_resource path="res://assets/Personagem/p1_walk05.png" type="Texture" id=7]
[ext_resource path="res://assets/Personagem/p1_walk06.png" type="Texture" id=8]
[ext_resource path="res://assets/Personagem/p1_walk07.png" type="Texture" id=9]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=10]
[ext_resource path="res://assets/Tiles/cloud1.png" type="Texture" id=11]
[ext_resource path="res://assets/Tiles/cloud2.png" type="Texture" id=12]
[ext_resource path="res://scenes/moeda.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/lesma.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/blocoDest.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/platMovel.gd" type="Script" id=16]
[ext_resource path="res://assets/Tiles/stoneCliffLeft.png" type="Texture" id=17]
[ext_resource path="res://assets/Tiles/stoneCliffRight.png" type="Texture" id=18]
[ext_resource path="res://assets/Botoes/esquerda0.png" type="Texture" id=19]
[ext_resource path="res://assets/Botoes/esquerda1.png" type="Texture" id=20]
[ext_resource path="res://assets/Botoes/direita0.png" type="Texture" id=21]
[ext_resource path="res://assets/Botoes/direita1.png" type="Texture" id=22]
[ext_resource path="res://assets/Botoes/cima0.png" type="Texture" id=23]
[ext_resource path="res://assets/Botoes/cima1.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 10, 302.416 )

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 28.5843, 55.6102 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 27.5826, 2.22925 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 28.7802, 54.1939 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 25.6807, 0.514557 )

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, -4.85706, -1.7486, 0, 0, 0, 0, -240.408, -2.12778 )
}

[sub_resource type="Curve2D" id=8]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, 30.274, 1.13258, -121.874, -18.4323, 166.866, -29.4037, 174.635, -238.296, 0, 0, 0, 0, 321.638, 0.692459 )
}

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( -35.0776, -30.24, -30.5591, -34.9965, 100.246, -34.7587, 105.002, -29.7643, 105.002, -5.50598, 101.435, 7.33667, 95.7271, 13.758, 82.6465, 24.6981, 57.9126, 32.3085, 38.4106, 35.8759, 14.866, 33.9733, -5.34937, 27.552, -21.7595, 17.8011, -31.0347, 4.72058, -35.7913, -5.74377 )

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="spawn_point" type="Position2D" parent="."]

[node name="spawn_time" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="fim" type="Area2D" parent="."]

transform/pos = Vector2( 3063.14, 503.137 )
input/pickable = true
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -123.594 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0

[node name="shape" type="CollisionShape2D" parent="fim"]

transform/pos = Vector2( 0, -123.594 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="deadCamera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="personagem" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 378.296, 397.347 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1, 3.57303 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
collision/margin = 0.01
script/script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="personagem"]

transform/scale = Vector2( 1.3, 1.3 )
frames = SubResource( 2 )
animation = "default"
frame = 6
playing = true

[node name="shape" type="CollisionShape2D" parent="personagem"]

transform/pos = Vector2( 1, 3.57303 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="rayE" type="RayCast2D" parent="personagem"]

transform/pos = Vector2( -27.4207, 60.356 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 2
type_mask = 15

[node name="rayD" type="RayCast2D" parent="personagem"]

transform/pos = Vector2( 29.3538, 60.2587 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 2
type_mask = 15

[node name="camera" type="Camera2D" parent="personagem"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.1
drag_margin/top = 0.1
drag_margin/right = 0.1
drag_margin/bottom = 0.2

[node name="pes" type="Area2D" parent="personagem"]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.767334, 62.8029 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="personagem/pes"]

transform/pos = Vector2( 0.767334, 62.8029 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="corpo" type="Area2D" parent="personagem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.858551, 4.50742 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="personagem/corpo"]

transform/pos = Vector2( 0.858551, 4.50742 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="cabeca" type="Area2D" parent="personagem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -59.918 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2

[node name="shape" type="CollisionShape2D" parent="personagem/cabeca"]

transform/pos = Vector2( 0, -59.918 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="tileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 10 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 2
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 65535, 3, 131071, 3, 196607, 3, 131077, 1, 131078, 0, 131079, 4, 131080, 4, 131081, 0, 131082, 2, 262143, 3, 196615, 5, 196616, 5, 327679, 3, 262151, 5, 262152, 5, 393215, 3, 327687, 5, 327688, 5, 327694, 1, 327695, 2, 458751, 3, 393223, 5, 393224, 5, 393241, 1, 393242, 0, 393243, 2, 524287, 3, 458759, 5, 458760, 5, 458776, 1, 458777, 0, 458778, 0, 458779, 2, 589823, 3, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 4, 524306, 4, 524307, 0, 524308, 0, 524309, 0, 524310, 0, 524311, 0, 524312, 0, 524313, 0, 524314, 0, 524315, 0, 524316, 0, 524317, 0, 524327, 0, 524328, 0, 524329, 0, 524330, 0, 524331, 0, 524332, 0, 524333, 0, 524334, 0, 524335, 0, 589824, 3, 589825, 3, 589826, 3, 589827, 3, 589828, 3, 589829, 3, 589830, 3, 589831, 3, 589832, 3, 589833, 3, 589834, 3, 589835, 3, 589836, 3, 589837, 3, 589838, 3, 589839, 3, 589840, 3, 589841, 5, 589842, 5, 589843, 3, 589844, 3, 589845, 3, 589846, 3, 589847, 3, 589848, 3, 589849, 3, 589850, 3, 589851, 3, 589852, 3, 589853, 3, 589854, 4, 589855, 4, 589856, 4, 589857, 4, 589858, 4, 589859, 4, 589860, 4, 589861, 4, 589862, 4, 589863, 4, 589864, 4, 589865, 4, 589866, 4, 589867, 4, 589868, 4, 589869, 4, 589870, 4, 589871, 4, 655360, 3, 655361, 3, 655362, 3, 655363, 3, 655364, 3, 655365, 3, 655366, 3, 655367, 3, 655368, 3, 655369, 3, 655370, 3, 655371, 3, 655372, 3, 655373, 3, 655374, 3, 655375, 3, 655376, 3, 655377, 5, 655378, 5, 655379, 3, 655380, 3, 655381, 3, 655382, 3, 655383, 3, 655384, 3, 655385, 3, 655386, 3, 655387, 3, 655388, 3, 655389, 3, 655390, 5, 655391, 5, 655392, 5, 655393, 5, 655394, 5, 655395, 5, 655396, 5, 655397, 5, 655398, 5, 655399, 3, 655400, 3, 655401, 3, 655402, 3, 655403, 3, 655404, 3, 655405, 5, 655406, 5, 655407, 5, 720896, 3, 720897, 3, 720898, 3, 720899, 3, 720900, 3, 720901, 3, 720902, 3, 720903, 3, 720904, 3, 720905, 3, 720906, 3, 720907, 3, 720908, 3, 720909, 3, 720910, 3, 720911, 3, 720912, 3, 720913, 5, 720914, 5, 720915, 3, 720916, 3, 720917, 3, 720918, 3, 720919, 3, 720920, 3, 720921, 3, 720922, 3, 720923, 3, 720924, 3, 720925, 3, 720926, 5, 720927, 5, 720928, 5, 720929, 5, 720930, 5, 720931, 5, 720932, 5, 720933, 5, 720934, 5, 720935, 3, 720936, 3, 720937, 3, 720938, 3, 720939, 3, 720940, 3, 720941, 5, 720942, 5, 720943, 5 )

[node name="parallax" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="layer" type="ParallaxLayer" parent="parallax"]

motion/scale = Vector2( 0.5, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 190.216, 131.271 )
transform/scale = Vector2( 1.36969, 1.15512 )
texture = ExtResource( 11 )

[node name="Sprite1" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 948.044, 103.668 )
transform/scale = Vector2( 1.18174, 0.842339 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 1022.07, 146.233 )
transform/scale = Vector2( 1.18174, 0.842339 )
texture = ExtResource( 12 )

[node name="moedas" type="Node2D" parent="."]

editor/display_folded = true

[node name="moeda" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 735, 525 )

[node name="moeda1" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 805, 525 )

[node name="moeda2" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 875, 525 )

[node name="moeda3" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 1295, 385 )

[node name="moeda4" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 1575, 525 )

[node name="moeda5" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2835, 525 )

[node name="moeda13" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2905, 525 )

[node name="moeda14" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2975, 525 )

[node name="moeda15" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2975, 455 )

[node name="moeda16" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2905, 455 )

[node name="moeda17" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2975, 385 )

[node name="moeda18" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 3115, 315 )

[node name="moeda6" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 525, -35 )

[node name="moeda7" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 595, -35 )

[node name="moeda8" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 595, -105 )

[node name="moeda9" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 525, -105 )

[node name="moeda10" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 455, -35 )

[node name="moeda11" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 665, -35 )

[node name="moeda12" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2415, 175 )

[node name="inimigos" type="Node2D" parent="."]

editor/display_folded = true

[node name="lesma" parent="inimigos" instance=ExtResource( 14 )]

transform/pos = Vector2( 1010.42, 540.554 )
curve = SubResource( 3 )

[node name="blocos" type="Node2D" parent="."]

editor/display_folded = true

[node name="blocoDest" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 105, 385 )

[node name="blocoDest1" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 175, 385 )

[node name="blocoDest2" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 175, 175 )

[node name="blocoDest3" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 245, 385 )

[node name="plataformas" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 2205, 595 )

[node name="platMovel" type="Path2D" parent="plataformas"]

curve = SubResource( 8 )

[node name="follow" type="PathFollow2D" parent="plataformas/platMovel"]

transform/pos = Vector2( 30.274, 1.13258 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="body" type="KinematicBody2D" parent="plataformas/platMovel/follow"]

input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 16 )

[node name="sprite" type="Sprite" parent="plataformas/platMovel/follow/body"]

texture = ExtResource( 17 )

[node name="sprite1" type="Sprite" parent="plataformas/platMovel/follow/body"]

transform/pos = Vector2( 70, 0 )
texture = ExtResource( 18 )

[node name="poly" type="CollisionPolygon2D" parent="plataformas/platMovel/follow/body"]

build_mode = 0
polygon = Vector2Array( -35.0776, -30.24, -30.5591, -34.9965, 100.246, -34.7587, 105.002, -29.7643, 105.002, -5.50598, 101.435, 7.33667, 95.7271, 13.758, 82.6465, 24.6981, 57.9126, 32.3085, 38.4106, 35.8759, 14.866, 33.9733, -5.34937, 27.552, -21.7595, 17.8011, -31.0347, 4.72058, -35.7913, -5.74377 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="canvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="controles" type="Node2D" parent="canvasLayer"]

[node name="touchLeft" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 115.713, 564.771 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 19 )
pressed = ExtResource( 20 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchRight" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 244.647, 564.771 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 21 )
pressed = ExtResource( 22 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchUp" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 1040.18, 567.83 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 23 )
pressed = ExtResource( 24 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="timeout" from="spawn_time" to="." method="_on_spawn_time_timeout"]

[connection signal="body_enter" from="fim" to="personagem" method="_on_fim_body_enter"]

[connection signal="fim" from="personagem" to="." method="_on_personagem_fim"]

[connection signal="morreu" from="personagem" to="." method="_on_personagem_morreu"]

[connection signal="body_enter" from="personagem/pes" to="personagem" method="_on_pes_body_enter"]

[connection signal="body_enter" from="personagem/corpo" to="personagem" method="_on_corpo_body_enter"]

[connection signal="body_enter" from="personagem/cabeca" to="personagem" method="_on_cabeca_body_enter"]

[connection signal="pressed" from="canvasLayer/controles/touchLeft" to="personagem" method="_on_touchLeft_pressed"]

[connection signal="released" from="canvasLayer/controles/touchLeft" to="personagem" method="_on_touchLeft_released"]

[connection signal="pressed" from="canvasLayer/controles/touchRight" to="personagem" method="_on_touchRight_pressed"]

[connection signal="released" from="canvasLayer/controles/touchRight" to="personagem" method="_on_touchRight_released"]

[connection signal="pressed" from="canvasLayer/controles/touchUp" to="personagem" method="_on_touchUp_pressed"]

[connection signal="released" from="canvasLayer/controles/touchUp" to="personagem" method="_on_touchUp_released"]


